<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/information_menu_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/information_menu_title"
            android:textColor="@color/textColor"
            android:textSize="@dimen/information_menu_title_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information_menu_text"
            android:textColor="@color/textColor"
            android:textSize="@dimen/regular_body_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/information_menu_title_more_info"
            android:textColor="@color/textColor"
            android:textSize="@dimen/information_menu_title_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/home_page_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/link_icon_size"
                android:layout_height="@dimen/link_icon_size"
                android:src="@drawable/ic_globe_48dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/kuldiga_home_page"
                android:textColor="@color/textColor"
                android:textSize="@dimen/bigger_body_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wikipedia_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/link_icon_size"
                android:layout_height="@dimen/link_icon_size"
                android:src="@drawable/ic_globe_48dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/wikipedia"
                android:textColor="@color/textColor"
                android:textSize="@dimen/bigger_body_text_size" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>